<resources>
    <string name="app_name">ป้ายจราจรน่ารู้</string>
    <string name="my_name">ชื่อ-สกุล : นายวัฒนา คำโนนม่วง</string>
    <string name="my_major">หลักสูตร :วิทยาการคอมพิวเตอร์คณะวิทยาศาสตร์และเทคโนโลยี</string>
    <string name="my_university">มหาวิทยาลัยสวนดุสิต</string>
    <string name="my_mobile">เบอร์ติดต่อ : 0844088481</string>
    <string name="my_facebook">https ://www.facebook.com/wattana.taoha.com</string>
</resources>
